--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
 
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <link rel="icon" href="/favicon.ico" />
   <title>React.js Boilerplate</title>
